--- a/src/researcherinterface/templates/index.html
+++ b/src/researcherinterface/templates/index.html
@@ -79,14 +79,6 @@
 	      <!-- Form Name -->
 	      <legend>Create Account</legend>
 
-	      <!-- Text input-->
-	      <div class="form-group">
-		<label class="col-md-4 control-label" for="username">User Name:</label>  
-		<div class="col-md-4">
-		<input id="username" name="username" type="text" placeholder="ex. imageDude93" class="form-control input-md" required="">
-		  
-		</div>
-	      </div>
 
 	      <!-- Text input-->
 	      <div class="form-group">
@@ -155,9 +147,9 @@
 
 	      <!-- Text input-->
 	      <div class="form-group">
-		<label class="col-md-4 control-label" for="username">User Name:</label>  
+		<label class="col-md-4 control-label" for="email">email:</label>  
 		<div class="col-md-4">
-		<input id="username" name="username" type="text" placeholder="ex. imageDude93" class="form-control input-md" required="">
+		<input id="email" name="email" type="text" placeholder="ex. aaron@quesotech.com" class="form-control input-md" required="">
 		  
 		</div>
 	      </div>	      
