--- a/src/researcherinterface/templates/index.html
+++ b/src/researcherinterface/templates/index.html
@@ -34,6 +34,10 @@
 	      <a href = "#">About</a>
 	   </li>
 	   
+	   <li>
+	      {{if .User }} <a href = "/logout">Logout</a>{{end}}
+	     </li>
+	   
 	 </ul>
 	</div>
 	
@@ -73,6 +77,9 @@
       
       <div class ="row">
 	<div class ="col-lg-4">
+	  
+	  {{if .User }}
+	  {{ else }}
   	    <form action = "/signup" method = "POST" class="form-horizontal">
 	      <fieldset>
 
@@ -138,6 +145,8 @@
       
 	   </div>
       
+	{{end}}
+
             <div class="col-lg-4">
   	    <form action = "/signin" method = "POST" class="form-horizontal">
 	      <fieldset>
