--- a/src/researcherinterface/templates/index.html
+++ b/src/researcherinterface/templates/index.html
@@ -50,7 +50,92 @@
 	
 	  <div class = "col-lg-4">
 	    <h1> 1. Request Dataset </h1>
-	    <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel accumsan ex. Suspendisse vel arcu quis urna finibus congue sit amet commodo nisi. Fusce quis vehicula nisi. </p>
+	    {{ if .User }} 
+	    <form action="/create_dataset" method="POST">
+
+	      <fieldset>
+
+	      <!-- Form Name -->
+	      <legend>Define Dataset</legend>
+
+
+	      <!-- Text input-->
+	      <div class="form-group">
+		<label class="col-md-4 control-label" for="fname">Dataset Name:</label>  
+		<div class = "col-md-8">
+		<input id="name" name="name" type="text" placeholder="ex. Cats with Guns" class="form-control input-md" required>
+		  
+		</div>
+	      </div>
+
+	      <!-- Text input-->
+	      <div class="form-group">
+		<label class="col-md-4 control-label" for="target">Expected Target:</label>  
+		<div class = "col-md-8">
+		<input id="target" name="target" type="text" placeholder="ex. Cats" class="form-control input-md" required>
+		  
+		</div>
+	      </div>
+
+	      <!-- Text input-->
+	      <div class="form-group">
+		<label class="col-md-4 control-label" for="dummies">Dummies:</label>  
+		<div class="col-md-8">
+		<input id="dummies" name="dummies" type="text" placeholder="ex. dogs,walruses,capybaras" class="form-control input-md" required>
+		  
+		</div>
+	      </div>
+
+	      <!-- Text input-->
+	      <div class="form-group">
+		<label class="col-md-4 control-label" for="lat">Latitude:</label>  
+		<div class="col-md-8">
+		<input id="lat" name="lat" type="text" placeholder="ex. 38.0297" class="form-control input-md" required>
+		  
+		</div>
+	      </div>
+
+	      <!-- Text input-->
+	      <div class="form-group">
+		<label class="col-md-4 control-label" for="long">Longitude:</label>  
+		<div class="col-md-8">
+		<input id="long" name="long" type="text" placeholder="ex. -84.4947" class="form-control input-md" required>
+
+		</div>
+	      </div>
+
+	      <!-- Text input-->
+	      <div class="form-group">
+		<label class="col-md-4 control-label" for="stime">Start Time:</label>  
+		<div class="col-md-8">
+		<input id="stime" name="stime" type="time" placeholder="ex. HH:MM:SS" class="form-control input-md" required>
+		  
+		</div>
+	      </div>
+
+	      <!-- Text input-->
+	      <div class="form-group">
+		<label class="col-md-4 control-label" for="etime">End Time:</label>  
+		<div class="col-md-8">
+		<input id="etime" name="etime" type="time" placeholder="ex. HH:MM:SS" class="form-control input-md" required>
+		  
+		</div>
+	      </div>
+
+
+	      <!-- Button -->
+	      <div class="form-group">
+		<label class="col-md-4 control-label" for="submit"></label>
+		<div class="col-md-8">
+		  <button id="submit" name="submit" type = "submit" class="btn btn-primary">Submit</button>
+		</div>
+	      </div>
+
+	      </fieldset>
+</form>
+
+
+	    {{else}}<p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel accumsan ex. Suspendisse vel arcu quis urna finibus congue sit amet commodo nisi. Fusce quis vehicula nisi. </p>{{end}}
 	    
 	  
 	  </div>
