--- a/src/researcherinterface/templates/index.html
+++ b/src/researcherinterface/templates/index.html
@@ -26,7 +26,7 @@
 	   </li>
 	   
 	   <li>
-	      {{if .User }} <a href = "/account">{{.User}}'s Account </a>
+	      {{if .User.Name.First }} <a href = "/account">{{.User.Name.First}}'s Account </a>
 	      {{else}}
 	      <a href = "#">Create Account</a>
 	      {{end}}
