Fixed Hotel California bug with researcher interface

--- a/src/researcherinterface/templates/index.html
+++ b/src/researcherinterface/templates/index.html
@@ -35,7 +35,7 @@
 	   </li>
 	   
 	   <li>
-	      {{if .User }} <a href = "/logout">Logout</a>{{end}}
+	      {{if .User.Name.First }} <a href = "/logout">Logout</a>{{end}}
 	     </li>
 	   
 	 </ul>
