updating researching image and activity log

--- a/src/researcherinterface/templates/index.html
+++ b/src/researcherinterface/templates/index.html
@@ -134,14 +134,14 @@
 </form>
 
 
-	    {{else}}<p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel accumsan ex. Suspendisse vel arcu quis urna finibus congue sit amet commodo nisi. Fusce quis vehicula nisi. </p>{{end}}
+	    {{else}}<p> Describe a dataset that suits your needs.</p>{{end}}
 	    
 	  
 	  </div>
 	  
 	  <div class = "col-lg-4">
 	    <h1> 2. See Statistics </h1>
-	    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel accumsan ex. Suspendisse vel arcu quis urna finibus congue sit amet commodo nisi. Fusce quis vehicula nisi.</p>  
+	    <p> View updates on your dataset as users contribute to it.</p>  
 	    
 	    <h2> Progress on Cats Dataset</h2>
 	    <div class = "progress">
@@ -154,7 +154,7 @@
 	  
 	  <div class = "col-lg-4">
 	    <h1> 3. Download Data </h1>
-	    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel accumsan ex. Suspendisse vel arcu quis urna finibus congue sit amet commodo nisi. Fusce quis vehicula nisi.</p>
+	    <p> Download the dataset and use it in your research.</p>
 	  </div>
 	
 	</div>
