--- a/src/researcherinterface/templates/index.html
+++ b/src/researcherinterface/templates/index.html
@@ -63,7 +63,7 @@
 	      <div class="form-group">
 		<label for="fname">Dataset Name:</label>  
 		
-		<input id="name" name="name" type="text" placeholder="ex. Cats with Guns" class="form-control input-md" required>
+		<input id="name" name="name" type="text" placeholder="ex. Cats" class="form-control input-md" required>
 	      </div>	  
 		
 	      
