One more form value

--- a/src/researcherinterface/templates/index.html
+++ b/src/researcherinterface/templates/index.html
@@ -66,6 +66,13 @@
 		<input id="name" name="name" type="text" placeholder="ex. Cats" class="form-control input-md" required>
 	      </div>	  
 		
+
+	      <!-- Text input-->
+	      <div class="form-group">
+		<label for="nimages">Requested Number of Images:</label>  
+		
+		<input id="name" name="name" type="text" placeholder="ex. 2000" class="form-control input-md" required>
+	      </div>
 	      
 
 	      <!-- Text input-->
