requested number of images

--- a/src/researcherinterface/templates/index.html
+++ b/src/researcherinterface/templates/index.html
@@ -71,7 +71,7 @@
 	      <div class="form-group">
 		<label for="nimages">Requested Number of Images:</label>  
 		
-		<input id="name" name="name" type="text" placeholder="ex. 2000" class="form-control input-md" required>
+		<input id="nimages" name="nimages" type="text" placeholder="ex. 2000" class="form-control input-md" required>
 	      </div>
 	      
 
